[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
wgpu = "0.17.0"
winit = "0.28.6"
pollster = "0.3.0"
bytemuck = {version ="1.13.1", features = ["derive"]}
rfd = "0.11.4"
rodio = "0.17.1"